CRH-LMS-FINAL-DEPLOY/CRH-VPS-DEPLOY/LMS-K8S/K8S-1ST/lms-blog-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-deployment
  labels:
    app: blog
spec:
  replicas: 2
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      containers:
      - name: blog-container
        image: technozen2024/crh-lms-project:lms-blog-container
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "0.5"
            memory: "64Mi"
      imagePullSecrets:
        - name: regcred  
---
apiVersion: v1
kind: Service
metadata:
  name: blog-service
spec:
  selector:
    app: blog
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: NodePort
