CRH-LMS-FINAL-DEPLOY/CRH-VPS-DEPLOY/LMS-K8S/K8S-1ST/lms-client-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
  labels:
    app: client
spec:
  replicas: 2
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client-container
        image: technozen2024/crh-lms-project:lms-client-container
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "1"
            memory: "256Mi"
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  selector:
    app: client
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  type: NodePort
