CRH-LMS-FINAL-DEPLOY/CRH-VPS-DEPLOY/LMS-K8S/K8S-1ST/lms-server-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
  labels:
    app: server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - name: server-container
        image: technozen2024/crh-lms-project:lms-server-container
        ports:
        - containerPort: 5000
        resources:
          limits:
            cpu: "1"
            memory: "512Mi"
      imagePullSecrets:
      - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: server-service
spec:
  selector:
    app: server
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
  type: ClusterIP






# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: server-deployment
#   labels:
#     app: server
# spec:
#   replicas: 2
#   selector:
#     matchLabels:
#       app: server
#   template:
#     metadata:
#       labels:
#         app: server
#     spec:
#       containers:
#       - name: server-container
#         image: technozen2024/crh-lms-project:lms-server-container
#         ports:
#         - containerPort: 5000
#         env:
#         - name: MONGODB_URI
#           valueFrom:
#             configMapKeyRef:
#               name: server-config
#               key: MONGODB_URI
#         - name: JWT_SECRET
#           valueFrom:
#             secretKeyRef:
#               name: server-secrets
#               key: JWT_SECRET
#         resources:
#           limits:
#             cpu: "1"
#             memory: "512Mi"
#       imagePullSecrets:
#         - name: regcred
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: server-service
# spec:
#   selector:
#     app: server
#   ports:
#   - protocol: TCP
#     port: 5000
#     targetPort: 5000
#   type: ClusterIP
