CRH-LMS-FINAL-DEPLOY/CRH-VPS-DEPLOY/LMS-K8S/K8S-1ST/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lms-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: lalbudha.com.np
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: client-service
            port:
              number: 3000
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: server-service
            port:
              number: 5000
  - host: blog.lalbudha.com.np
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blog-service
            port:
              number: 80
